safari specific navbar bug squashed

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -24,9 +24,27 @@
 		margin-left: 0.4em;
 		align-items: center;
 
+
 	}
 
 }
+
+_::-webkit-:not(:root:root), .safari_only {
+	#wejay-nav-logo{
+		margin-top: 0.4em;
+	}
+
+}
+
+
+_::-webkit-:-webkit-full-screen:host:not(:root:root), .safari_only {
+
+	#wejay-nav-logo{
+		margin-top: 0.4em;
+	}
+
+}
+
 
 
 .navbar-col {
